			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Bug#38: incorrect spacing in write_term on Unicode characters.
    Dmitry.


VERSION 5.5.16 (May 02, 2005)
=============================

  * FIXED: hash_term/2: various problems handling compound terms:
    instable results, undefined results on terms with shared
    subterms.  Hugo Ferreira.

  * FIXED: PL_new_atom_wchars() did not canonise the atom representation,
    so PL_new_atom_wchars(2, L"nl") != PL_new_atom_nchars(2, "nl").  Paul
    Singleton.


VERSION 5.5.15 (April 22, 2005)
===============================

  * FIXED: Bug#32: offset in colouring using cyrillic data.  Actually
    a bug in subterm_positions option of read_term (Dmitry).

  * ENHANCED: The functions min and max to return one of the values 
    rather then converting to float.  Avoids rounding errors on large
    integers.  Markus Triska.

  * FIXED: thread_get_message/[1,2] using a lot of system time on some
    Unix based platforms.  Jacco van Ossenbruggen.

  * FIXED: alignment for some platforms (Andreas Schwab).

  * PORT: Made compilation clean for GCC 4.0.  Work with Stefan Dirsch
    from SuSE preparing for the next SuSE release.

  * MODIFIED: renamed option initfile for qsave_program/2 to init_file.
    Inconsistent with the documentation and the rest of the system calls
    it init_file as well.  Mike Elston.

  * FIXED: two memory leaks in concat_atom/3.

VERSION 5.5.14 (April 18, 2005)
===============================

  * FIXED: Bug#31: Crash when asserting predicates with wide-character
    functor name (mutex-name problem).  Also fixed mutex_statistics/0
    for such predicates.  Dmitry.

  * FIXED: Do not add BOM by default when a file is opened for write with
    explicit encoding.
